# droplet

./: .gitignore  Cargo.toml  LICENSE  README.md  droplet.toml
src/: main.rs  util.rs
src/atom/: mod.rs
src/atom/core/: config.rs  error.rs  mod.rs  settings.rs
src/atom/nucleus/: mod.rs
src/atom/valence/: mod.rs
src/core/: error.rs  mod.rs  settings.rs
src/nucleus/: args.rs  mod.rs
src/valence/: mod.rs
