[package]
name = "droplet"
version = "1.0.0"
edition = "2021"
description = "A simple utility to assist small organizations/groups in distributing a service across multiple machines"
repository = "https://github.com/SaphiraKai/droplet"
homepage = "https://github.com/SaphiraKai/droplet"
license = "MIT"
keywords = ["hosting", "service", "freedns", "sync", "minecraft-server"]
categories = ["command-line-utilities"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
